test/org/midica/testfiles/failing/chord-inside-macro.midica
INCLUDE_FILE inc/instruments.midica

MACRO test
	CHORD testchord c d e
	0 c /4
END
